--- a/font.css
+++ b/font.css
@@ -10,23 +10,23 @@
 @font-face {
   font-family: Chakra Petch Medium; /* เปลี่ยนจาก ChakraPetch-Medium เป็น Chakra Petch Medium ให้ตรงกับที่เรียกใช้ */
   src: url("fonts/ChakraPetch-Medium.ttf");
-  /* font-display: swap; */ /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
+  font-display: swap; /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
 }
 
 @font-face {
   font-family: Kanit-Bold;
   src: url("fonts/Kanit-Bold.ttf");
-  /* font-display: swap; */ /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
+  font-display: swap; /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
 }
 
 @font-face {
   font-family: Kanit-Medium;
   src: url("fonts/Kanit-Medium.ttf");
-  /* font-display: swap; */ /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
+  font-display: swap; /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
 }
 
 @font-face {
   font-family: Kanit-Thin;
   src: url("fonts/Kanit-Thin.ttf");
-  /* font-display: swap; */ /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
+  font-display: swap; /* พิจารณาเพิ่มเพื่อควบคุมการแสดงผลขณะโหลด */
 }
